# prometheus-effect-load-test

./: Main.hs  prometheus-effect-load-test.cabal  run.sh  stack.yaml
